custom errors off - debug mode

--- a/src/Orchard.Specs/Hosting/Orchard.Web/Web.config
+++ b/src/Orchard.Specs/Hosting/Orchard.Web/Web.config
@@ -83,7 +83,7 @@
         <authentication mode="Forms">
             <forms loginUrl="~/Users/Account/AccessDenied" timeout="2880" />
         </authentication>
-        <customErrors mode="RemoteOnly" />
+        <customErrors mode="Off" />
         <pages>
             <namespaces>
                 <add namespace="System.Collections.Generic" />
