--- a/src/Orchard.Azure/Orchard.Azure.Web/Web.Release.config
+++ b/src/Orchard.Azure/Orchard.Azure.Web/Web.Release.config
@@ -6,6 +6,6 @@
 	</system.transactions>
 	<system.web>
 		<compilation xdt:Transform="RemoveAttributes(debug)" />
-		<customErrors mode="RemoteOnly" xdt:Transform="SetAttributes(mode)" />
+		<customErrors mode="Off" xdt:Transform="SetAttributes(mode)" />
 	</system.web>
 </configuration>
