--- a/src/Orchard.Web/Web.Release.config
+++ b/src/Orchard.Web/Web.Release.config
@@ -6,7 +6,7 @@
 	</system.transactions>
 	<system.web>
 		<compilation xdt:Transform="RemoveAttributes(debug)" />
-		<customErrors mode="RemoteOnly" xdt:Transform="SetAttributes(mode)" />
+		<customErrors mode="Off" xdt:Transform="SetAttributes(mode)" />
 		<machineKey validationKey="AutoGenerate" decryptionKey="AutoGenerate" xdt:Transform="SetAttributes(validationKey,decryptionKey)" />
 	</system.web>
 </configuration>
