--- a/src/Orchard.Web/Web.config
+++ b/src/Orchard.Web/Web.config
@@ -42,6 +42,7 @@
     <defaultSettings timeout="00:30:00" />
   </system.transactions>
   <system.web>
+    <customErrors mode="Off"/>
     <!-- Accept file uploads up to 64 MB. -->
     <httpRuntime targetFramework="4.8" requestValidationMode="2.0" maxRequestLength="65536" />
     <compilation debug="true" targetFramework="4.8" batch="true" numRecompilesBeforeAppRestart="250" optimizeCompilations="true">
